--- a/test_no1/localisation/flavor_events_l_english.yml
+++ b/test_no1/localisation/flavor_events_l_english.yml
@@ -5058,3 +5058,7 @@
  totemism_flavor.18.b:0 "We must ask the gods for help in this difficult times."
  tot_great_famine:0 "Great Famine"
  desc_tot_great_famine:0 "A great famine caused by war has increased the unrest in our capital."
+ flavor_ire.1.t:0 "We will offer Ulster a chance of mutual protection"
+ flavor_ire.1.d:0 "We have proven ourselves to be a valuable ally and gallant friend to the wild Ulster men./n"[Root.Monarch.GetName] has offered them a chance for protection against the Scots and English"
+ flavor_ire.1.tt:0 "We will offer §Y[ULS.GetName]§! vassalization. If they accept they become our vassal, otherwise we will get a §YSubjugation§! casus belli against the §Y[ULS.GetName]§! for §Y30 years§!.\n\nTheir acceptance gets more likely the more §YDiplomatic Reputation§! we have."
+ flavor_ire.2.t
